title-text-overflow-fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,13 +104,14 @@ h2{
 }
 
 .press-image{
-    padding:20px 20px 50px;
-    width: 15%;
+    padding:20px 20px 20 20px;
+    width: 10%;
 }
 
 .carousel-item{
-    padding:7% 15%;
+    padding:7% 15% 7% 15%;
 }
+
 
 .press-image {
     -webkit-filter: grayscale(100%); 
@@ -140,14 +141,22 @@ h2{
     #title{
         text-align: center;
     }
+
+    #title h1{
+        font-size: 2.5rem;
+
+
+    }
     .image-title{
         position: static;
         transform: rotate(0deg);
     }
 
     #testimonials h2{
-        font-size: 1.5rem;
+        font-size: 1rem;
+        font-weight: lighter;
     }
+
 
     #press img{
         width: 20%;
